--- a/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/mq002/estilos/paisagem.css
@@ -1,3 +1,7 @@
 @charset "UTF-8";
 
 /* Aparelho deitado (landscape) */
+
+body {
+    background-image: url( ../estilos/imagens/cev-landscape.jpg );
+}
